--- a/multiple-dropdown-menus/css/style.css
+++ b/multiple-dropdown-menus/css/style.css
@@ -132,4 +132,45 @@ header .other-links ul li a {
   border-left: 0px;
   opacity: 0.6;
   transition: 150ms linear;
+}
+.nav > ul > li .dropdown-menu {
+  position: fixed;
+  transition: 250ms linear;
+  opacity: 0;
+  bottom: auto;
+  top: 40px;
+  border-radius: 6px;
+  max-height: min(100vh - 90px, 500px);
+  width: min(100% - 2rem, 400px);
+  pointer-events: none;
+}
+.nav > ul > li .dropdown-menu ul {
+  list-style-type: none;
+  position: relative;
+  background-color: var(--navbar-color);
+  border-radius: 6px;
+  overflow-x: hidden;
+  padding: 10px;
+  box-shadow: 0px 0px 10px var(--shadow-color);
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: -1;
+}
+.nav > ul > li .dropdown-menu ul li {
+  text-align: left;
+  width: 100%;
+  padding: 10px;
+  border-radius: 8px;
+}
+.nav > ul > li .dropdown-menu ul li:hover {
+  background-color: rgb(35, 150, 213);
+}
+.nav > ul > li .dropdown-menu ul li:hover a {
+  color: white;
+}
+.nav > ul > li .dropdown-menu ul li a {
+  text-decoration: none;
+  color: var(--text-color);
 }/*# sourceMappingURL=style.css.map */
