--- a/multiple-dropdown-menus/css/style.scss
+++ b/multiple-dropdown-menus/css/style.scss
@@ -1,135 +1,175 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 :root {
-  --bg-color: #fff;
-  --navbar-color: #fff;
-  --button-color: #fff;
-  --menu-color: #fff;
-  --text-color: #000;
-  --shadow-color: rgba(0, 0, 0, 0.09);
+	--bg-color: #fff;
+	--navbar-color: #fff;
+	--button-color: #fff;
+	--menu-color: #fff;
+	--text-color: #000;
+	--shadow-color: rgba(0, 0, 0, 0.09);
 }
 .darkmode {
-  --bg-color: rgb(25, 25, 25);
-  --navbar-color: rgb(15, 15, 15);
-  --button-color: rgb(0, 0, 0);
-  --menu-color: rgba(0, 0, 0, 0.931);
-  --text-color: #fff;
-  --shadow-color: rgba(0, 0, 0, 0.444);
+	--bg-color: rgb(25, 25, 25);
+	--navbar-color: rgb(15, 15, 15);
+	--button-color: rgb(0, 0, 0);
+	--menu-color: rgba(0, 0, 0, 0.931);
+	--text-color: #fff;
+	--shadow-color: rgba(0, 0, 0, 0.444);
 }
 body {
-  width: 100%;
-  background-color: var(--bg-color);
-  color: var(--text-color);
+	width: 100%;
+	background-color: var(--bg-color);
+	color: var(--text-color);
 }
 header {
-  display: flex;
-  position: fixed;
-  background-color: var(--navbar-color);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
-  height: 70px;
-  width: 100vw;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 20px;
-  .home-btn {
-    a {
-      text-decoration: none;
-      padding: 10px 20px;
-      background-color: var(--button-color);
-      color: var(--text-color);
-      border-radius: 25px;
-      box-shadow: 0px 0px 10px var(--shadow-color);
-    }
-  }
-  .other-links {
-    display: flex;
-    gap: 20px;
-    button {
-      border: none;
-      background-color: transparent;
-      padding: 10px;
-      background-color: var(--button-color);
-      color: var(--text-color);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      box-shadow: 0px 0px 10px var(--shadow-color);
-      cursor: pointer;
-    }
-    ul {
-      list-style-type: none;
-      display: flex;
-      gap: 10px;
-      justify-content: center;
-      align-items: center;
-      li {
-        a {
-          text-decoration: none;
-          background-color: rgb(28, 149, 210);
-          box-shadow: 0px 0px 10px var(--shadow-color);
-          padding: 10px 20px;
-          border-radius: 25px;
-          color: white;
-        }
-      }
-    }
-  }
+	display: flex;
+	position: fixed;
+	background-color: var(--navbar-color);
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+	height: 70px;
+	width: 100vw;
+	justify-content: space-between;
+	align-items: center;
+	padding-inline: 20px;
+	.home-btn {
+		a {
+			text-decoration: none;
+			padding: 10px 20px;
+			background-color: var(--button-color);
+			color: var(--text-color);
+			border-radius: 25px;
+			box-shadow: 0px 0px 10px var(--shadow-color);
+		}
+	}
+	.other-links {
+		display: flex;
+		gap: 20px;
+		button {
+			border: none;
+			background-color: transparent;
+			padding: 10px;
+			background-color: var(--button-color);
+			color: var(--text-color);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 50%;
+			box-shadow: 0px 0px 10px var(--shadow-color);
+			cursor: pointer;
+		}
+		ul {
+			list-style-type: none;
+			display: flex;
+			gap: 10px;
+			justify-content: center;
+			align-items: center;
+			li {
+				a {
+					text-decoration: none;
+					background-color: rgb(28, 149, 210);
+					box-shadow: 0px 0px 10px var(--shadow-color);
+					padding: 10px 20px;
+					border-radius: 25px;
+					color: white;
+				}
+			}
+		}
+	}
 }
 .nav {
-  height: 100%;
-  & > ul {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: start;
-    list-style-type: none;
-    overflow: auto;
-    & > li {
-      height: 100%;
-      display: flex;
-      padding: 20px;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-      input {
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        position: absolute;
-        cursor: pointer;
-      }
-      & > a {
-        text-decoration: none;
-        color: var(--text-color);
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        opacity: 0.7;
-        &::before {
-          position: absolute;
-          content: '';
-          width: 6px;
-          height: 6px;
-          top: 10px;
-          right: -15px;
-          rotate: 45deg;
-          border: 1px solid var(--text-color);
-          border-top: 0px;
-          border-left: 0px;
-          opacity: 0.6;
-          transition: 150ms linear;
-        }
-      }
-    }
-  }
+	height: 100%;
+	& > ul {
+		position: relative;
+		height: 100%;
+		width: 100%;
+		display: flex;
+		justify-content: start;
+		list-style-type: none;
+		overflow: auto;
+		& > li {
+			height: 100%;
+			display: flex;
+			padding: 20px;
+			text-align: center;
+			position: relative;
+			overflow: hidden;
+			input {
+				width: 100%;
+				height: 100%;
+				opacity: 0;
+				position: absolute;
+				cursor: pointer;
+			}
+			& > a {
+				text-decoration: none;
+				color: var(--text-color);
+				width: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				position: relative;
+				opacity: 0.7;
+				&::before {
+					position: absolute;
+					content: '';
+					width: 6px;
+					height: 6px;
+					top: 10px;
+					right: -15px;
+					rotate: 45deg;
+					border: 1px solid var(--text-color);
+					border-top: 0px;
+					border-left: 0px;
+					opacity: 0.6;
+					transition: 150ms linear;
+				}
+			}
+			.dropdown-menu {
+				position: fixed;
+				transition: 250ms linear;
+				opacity: 0;
+				bottom: auto;
+				top: 40px;
+				border-radius: 6px;
+				max-height: min(calc(100vh - 90px), 500px);
+				width: min(calc(100% - 2rem), 400px);
+				pointer-events: none;
+				ul {
+					list-style-type: none;
+					position: relative;
+					background-color: var(--navbar-color);
+					border-radius: 6px;
+					overflow-x: hidden;
+					padding: 10px;
+					box-shadow: 0px 0px 10px var(--shadow-color);
+					overflow-y: auto;
+					display: flex;
+					flex-direction: column;
+					gap: 10px;
+					z-index: -1;
+					li {
+						text-align: left;
+						width: 100%;
+						padding: 10px;
+						border-radius: 8px;
+						&:hover {
+							background-color: rgb(35, 150, 213);
+							a {
+								color: white;
+							}
+						}
+						a {
+							text-decoration: none;
+							color: var(--text-color);
+						}
+					}
+				}
+			}
+		}
+	}
 }
-
