--- a/glass-sidebar/css/style.css
+++ b/glass-sidebar/css/style.css
@@ -11,4 +11,35 @@ body {
   background-image: url("../images/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.sidebar {
+  width: 100px;
+  height: 100vh;
+  backdrop-filter: blur(6px);
+  -webkit-backdrop-filter: blur(6px);
+  background: rgba(10, 10, 10, 0.65);
+  box-shadow: 0 8px 32px rgb(2, 4, 24);
+  border-right: 2px solid rgba(255, 255, 255, 0.09);
+  transition: 0.4s ease-in-out;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.sidebar .logo {
+  width: 100%;
+  height: 100px;
+  padding: 40px 0;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+.sidebar .logo h3 {
+  color: #fff;
+  font-size: 36px;
+  margin-top: 12px;
+  font-variant: small-caps;
+  pointer-events: none;
+  scale: 0;
+  opacity: 0;
 }/*# sourceMappingURL=style.css.map */
