--- a/glass-sidebar/css/style.scss
+++ b/glass-sidebar/css/style.scss
@@ -48,7 +48,38 @@ body {
 	}
 	nav {
 		padding: 0 20px;
-
+		.nav-item {
+			cursor: pointer;
+			display: flex;
+			align-items: center;
+			justify-content: flex-start;
+			border-radius: 4px;
+			width: 100%;
+			height: 56px;
+			padding: 0 16px;
+			margin: 8px 0;
+			color: #fff;
+			transition: 0.3s;
+			.text {
+				font-size: 18px;
+				margin-left: 8px;
+				opacity: 0;
+				pointer-events: none;
+			}
+			&.active {
+				background: #ff328e !important;
+			}
+			&:hover {
+				background: rgba(255, 255, 255, 0.1);
+			}
+		}
+		hr {
+			width: 100%;
+			border: 0;
+			border-radius: 3px;
+			border-top: 2px solid rgba(255, 255, 255, 0.1);
+			margin: 40px 0 50px;
+		}
 	}
 
 }
