--- a/glass-sidebar/css/style.css
+++ b/glass-sidebar/css/style.css
@@ -84,6 +84,21 @@ body {
   border-top: 2px solid rgba(255, 255, 255, 0.1);
   margin: 40px 0 50px;
 }
+.sidebar .toggle {
+  cursor: pointer;
+  position: absolute;
+  color: #fff;
+  top: 20%;
+  right: -15px;
+  line-height: 50%;
+  text-align: center;
+  border-radius: 50%;
+  padding: 2px 0 2px 2px;
+  background: linear-gradient(90deg, transparent 50%, rgba(10, 10, 10, 0.65) 50%);
+}
+.sidebar .toggle span {
+  font-size: 28px;
+}
 .sidebar.open {
   width: 340px;
   max-width: 100%;
