--- a/glass-sidebar/css/style.scss
+++ b/glass-sidebar/css/style.scss
@@ -82,7 +82,21 @@ body {
 		}
 	}
 
-
+	.toggle {
+		cursor: pointer;
+		position: absolute;
+		color: #fff;
+		top: 20%;
+		right: -15px;
+		line-height: 50%;
+		text-align: center;
+		border-radius: 50%;
+		padding: 2px 0 2px 2px;
+		background: linear-gradient(90deg, transparent 50%, rgba(10, 10, 10, 0.65) 50%);
+		span {
+			font-size: 28px;
+		}
+	}
 	&.open {
 		width: 340px;
 		max-width: 100%;
